--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,12 @@
-spring.application.name=FilmReviewApplication
+spring:
+  application:
+    name: FilmReviewApplication
+  datasource:
+    url: jdbc:postgresql://localhost:5432/FilmReviewApplicationDataBase
+    username: postgres
+    password: 1234
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
